infrastructure/prod/victoria-metrics/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    # needs for victoria logs, node-exporter
    pod-security.kubernetes.io/enforce: privileged
