infrastructure/prod/victoria-metrics/vmsingle-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - vm.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: vmsingle-vmks-victoria-metrics-k8s-stack
          port: 8428
